--- a/OnMyWay/res/layout/activity_main.xml
+++ b/OnMyWay/res/layout/activity_main.xml
@@ -9,12 +9,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="dev.virco.onmyway.MainActivity" >
 
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/facebook_login"
+        style="@style/ParseLoginUI.Button.ThirdPartyLogin"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        facebook:confirm_logout="false" />
+        android:background="@drawable/com_parse_ui_facebook_login_button_background_selector"
+        android:drawableLeft="@drawable/com_parse_ui_facebook_login_logo"
+        android:text="@string/com_parse_ui_facebook_login_button_label" />
 
 </RelativeLayout>
