--- a/OnMyWay/res/menu/list.xml
+++ b/OnMyWay/res/menu/list.xml
@@ -3,9 +3,16 @@
     tools:context="dev.virco.onmyway.ListActivity" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:id="@+id/menu_list_add"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/menu_list_add"/>
+    <item
+        android:id="@+id/menu_list_invite"
+        android:showAsAction="never"
+        android:title="@string/menu_list_invite"/>
+      <item
+        android:id="@+id/menu_list_logout"
+        android:showAsAction="never"
+        android:title="@string/menu_list_logout"/>
 
 </menu>
