--- a/OnMyWay/res/layout/activity_list.xml
+++ b/OnMyWay/res/layout/activity_list.xml
@@ -13,7 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/list_activity_switch"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:dividerHeight="10dp"
+        android:divider="@android:color/transparent"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp" >
     </ListView>
 
     <Switch
