--- a/OnMyWay/res/menu/list.xml
+++ b/OnMyWay/res/menu/list.xml
@@ -6,9 +6,13 @@
         android:id="@+id/menu_list_add"
         android:showAsAction="never"
         android:title="@string/menu_list_add"/>
-      <item
+    <item
         android:id="@+id/menu_list_logout"
         android:showAsAction="never"
         android:title="@string/menu_list_logout"/>
+    <item
+        android:id="@+id/menu_list_test"
+        android:showAsAction="never"
+        android:title="test push"/>
 
 </menu>
