--- a/OnMyWay/res/menu/list.xml
+++ b/OnMyWay/res/menu/list.xml
@@ -10,9 +10,10 @@
         android:id="@+id/menu_list_logout"
         android:showAsAction="never"
         android:title="@string/menu_list_logout"/>
-    <item
-        android:id="@+id/menu_list_test"
-        android:showAsAction="never"
-        android:title="test push"/>
+    <!-- <item -->
+    <!-- android:id="@+id/menu_list_test" -->
+    <!-- android:showAsAction="never" -->
+    <!-- android:title="test push"/> -->
+
 
 </menu>
